--- a/portfolio/app/templates/resume.html
+++ b/portfolio/app/templates/resume.html
@@ -159,7 +159,7 @@
               </div>
               <div class="modal-body">
                   <!-- Certificate image -->
-                  <img src="/assets/img/" loading="lazy" class="certification-img img-fluid" alt="Certificate 2">
+                  <img src="/assets/img/CS50X.png" loading="lazy" class="certification-img img-fluid" alt="Certificate 2">
               </div>
               <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
