--- a/portfolio/app/assets/css/main.css
+++ b/portfolio/app/assets/css/main.css
@@ -822,6 +822,28 @@ h6 {
     transform: rotate(360deg);
   }
 }
+/* Responsive container */
+.embed-responsive {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+}
+/* Aspect ratio 16:9 */
+.embed-responsive-16by9 {
+  padding-bottom: 56.25%;
+}
+/* Styles for the iframe */
+.embed-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 
 /*--------------------------------------------------------------
 # Hero Section
