--- a/portfolio/app/templates/index.html
+++ b/portfolio/app/templates/index.html
@@ -9,9 +9,9 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>I'm <span>MARK MKHABELE</span> a Professional Software Developer </h2>
-          <p>I'm a backend developer fascinated by blockchain technology and its potential for Web 3.0. My focus is on building powerful backend solutions for dynamic web applications. While I haven't worked on RESTful APIs yet, I'm eager to learn and expand my skill set. Let's collaborate to bring your projects to life and explore new opportunities together.</p>
-          <a href="/contact" class="btn-get-started">Available for hire</a>
+          <h2>I'm <span>MARK MKHABELE</span>, a Software Engineer</h2>
+          <p>With a passion for innovation, I excel at crafting robust backend solutions for dynamic web applications. My expertise lies in Flask and Django frameworks, allowing me to create seamless experiences. I also possess frontend skills, enabling me to collaborate effectively across the stack. Currently, I am pursuing my first AWS Associate-level certification, demonstrating my commitment to expanding my cloud technology knowledge. Let's work together to bring your projects to life!</p>
+          <a href="/contact" class="btn-get-started">Let's Collaborate</a>
           <a class="btn-get-started mt-3" href="{{ url_for('static', filename='resume/resume.pdf') }}" download="MarkMkhabeleResume.pdf" target="_blank">
             Download my Resume
         </a>        
@@ -84,16 +84,16 @@
                 <!-- R -->
        <div class="col-6 col-md-3 mb-3">
            <i class="devicon-r-original" style="font-size: 45px;"></i>
-           <p>R</p>
+           
            
       </div>
         <div class="col-6 col-md-3 mb-3">
           <i class="devicon-java-plain-wordmark" style="font-size: 48px;"></i>
-          <p>Java</p>
+         
         </div>
         <div class="col-6 col-md-3 mb-3">
           <i class="devicon-c-plain-wordmark" style="font-size: 40px;"></i>
-          <p>C</p>
+          
         </div>
       </div>
     </div>
@@ -124,11 +124,11 @@
       <div class="row justify-content-center mt-5">
         <div class="col-6 col-md-3 mb-3">
           <i class="devicon-html5-plain-wordmark" style="font-size: 45px;"></i>
-          <p>HTML</p>
+          
         </div>
         <div class="col-6 col-md-3 mb-3">
           <i class="devicon-css3-plain-wordmark" style="font-size: 45px;"></i>
-          <p>CSS</p>
+          
         </div>
         <div class="col-6 col-md-3 mb-3">
           <i class="devicon-javascript-plain" style="font-size: 45px;"></i>
@@ -174,9 +174,23 @@
           <i class="devicon-git-plain" style="font-size: 45px;"></i>
           <p>Git</p>
         </div>
+
+        <!-- Figma -->
+        <div class="col-6 col-md-3 mb-5">
+          <i class="devicon-figma-plain" style="font-size: 45px;"></i>
+          <p>Figma</p>
+        </div>
+
+        <!-- Canva -->
+        <div class="col-6 col-md-3 mb-5">
+          <i class="devicon-canva-plain" style="font-size: 45px;"></i>
+          <p>Canva</p>
+        </div>
+
       </div>
     </div>
-  </section><!-- End Other Technologies Section -->
+</section>
+<!-- End Other Technologies Section -->
   
 
   
