--- a/portfolio/app/templates/portfolio.html
+++ b/portfolio/app/templates/portfolio.html
@@ -73,7 +73,7 @@
                 </div>
                 <p>The server efficiently handles HTTP requests and serves dynamic web pages, utilizing the Flask-Mail extension to provide seamless email handling for the contact form. This supports smooth communication and reliable message processing. While the portfolio section showcases projects and education, the server prioritizes delivering a streamlined experience with exceptional email services.</p>                <div class="button-container mt-3 d-flex justify-content-center">
                     <!-- Source Code Button -->
-                    <a href="https://github.com/your-github-repo" target="_blank" class="btn btn-secondary">Source Code</a>
+                    <a href="https://github.com/mkhmik004/BetterPortfolio" target="_blank" class="btn btn-secondary">Source Code</a>
                 </div>
             </div>
 
