--- a/portfolio/app/templates/index.html
+++ b/portfolio/app/templates/index.html
@@ -12,9 +12,10 @@
           <h2>I'm <span>MARK MKHABELE</span>, a Software Engineer</h2>
           <p>With a passion for innovation, I excel at crafting robust backend solutions for dynamic web applications. My expertise lies in Flask and Django frameworks, allowing me to create seamless experiences. I also possess frontend skills, enabling me to collaborate effectively across the stack. Currently, I am pursuing my first AWS Associate-level certification, demonstrating my commitment to expanding my cloud technology knowledge. Let's work together to bring your projects to life!</p>
           <a href="/contact" class="btn-get-started">Let's Collaborate</a>
-          <a class="btn-get-started mt-3" href="{{ url_for('static', filename='resume/resume.pdf') }}" download="MarkMkhabeleResume.pdf" target="_blank">
-            Download my Resume
-        </a>        
+          <a class="btn-get-started mt-3" href="assets/resume/resume.pdf" target="_blank">
+            Open Resume
+          </a>         
+
         </div>
       </div>
     </div>
