--- a/portfolio/app/templates/portfolio.html
+++ b/portfolio/app/templates/portfolio.html
@@ -16,10 +16,10 @@
             <p>Below are Projects i've worked on as either part of a course or freelance work</p>
             <span class="text-warning d-block">(For more projects, visit my YouTube & GitHub at the bottom/top right)</span>
 
-            <a href="/contact" class="btn-get-started">Available for hire</a>
-            <a class="btn-get-started mt-3" href="{{ url_for('static', filename='resume/resume.pdf') }}" download="MarkMkhabeleResume.pdf" target="_blank">
-              Download my Resume
-          </a>  
+            <a href="/contact" class="btn-get-started">Let's Collaborate</a>
+            <a class="btn-get-started mt-3" href="assets/resume/resume.pdf" target="_blank">
+              Open Resume
+            </a> 
 
           </div>
         </div>
@@ -56,7 +56,7 @@
                 <div class="text-center">
                     <img src="/assets/img/BF.png" loading="lazy" alt="BetterFinance App" style="width: 100%; max-width: 1200px; height: auto;">
                 </div>
-                <p>BetterFinance is a robust web application designed for logged-in users to engage in various financial activities. Users can "buy & sell" stocks, "deposit & withdraw" demo money, and update or reset their login details. Real-time stock quotes from the IEX API ensure accurate data for informed decision-making. Users can monitor their stock portfolio and review transaction history to stay on top of their financial activities. <span class="text-warning d-block">"Username and Password to register, no sensitive information is required."</span></p>
+                <p>BetterFinance is a robust web application designed for logged-in users to engage in various financial activities. Users can "buy & sell" stocks, "deposit & withdraw" demo money, and update or reset their login details. Real-time stock quotes from the IEX API ensure accurate data for informed decision-making. Users can monitor their stock portfolio and review transaction history to stay on top of their financial activities.<br><br> USERNAME:<span class="text-warning d-block">"mark"</span>PASSWORD:<span class="text-warning d-block">"mark"</span></p>
                 <div class="button-container mt-3 d-flex justify-content-center">
                     <!-- Software Demo Button -->
                     <a href="https://mkhmik004.pythonanywhere.com" target="_blank" class="btn btn-success">Demo Software</a>
@@ -65,17 +65,21 @@
                 </div>
             </div>
 
-            <!-- Project 2: New Project with Lazy-loaded YouTube Video -->
             <div class="col-md-6 project-item mb-5">
-                <h3>Portfolio Email server</h3>
-                <div class="embed-responsive embed-responsive-16by9 text-center">
-                  <iframe width="100%" height="auto" src="https://www.youtube.com/embed/5bVyB5epMek?si=62Pq50wnSwiVW3KD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
-                </div>
-                <p>The server efficiently handles HTTP requests and serves dynamic web pages, utilizing the Flask-Mail extension to provide seamless email handling for the contact form. This supports smooth communication and reliable message processing. While the portfolio section showcases projects and education, the server prioritizes delivering a streamlined experience with exceptional email services.</p>                <div class="button-container mt-3 d-flex justify-content-center">
-                    <!-- Source Code Button -->
-                    <a href="https://github.com/mkhmik004/BetterPortfolio" target="_blank" class="btn btn-secondary">Source Code</a>
-                </div>
-            </div>
+              <h3>Wiki Clone</h3>
+              <div class="text-center">
+                  <img src="/assets/img/BF.png" loading="lazy" alt="BetterFinance App" style="width: 100%; max-width: 1200px; height: auto;">
+              </div>
+              <p>WikiSite is a collaborative knowledge platform built using Django and Bootstrap. It allows users to create and edit wiki articles on various topics. With features such as article creation, editing, and search functionality, WikiSite provides a seamless experience for both creators and consumers of knowledge.</p>
+              <div class="button-container mt-3 d-flex justify-content-center">
+                  <!-- Software Demo Button -->
+                  <a href="https://www.youtube.com/watch?v=cdqIl0uor9Q&t=1s" target="_blank" class="btn btn-success">Video</a>
+                  <!-- Source Code Button -->
+                  <a href="https://github.com/mkhmik004/wikisite" target="_blank" class="btn btn-secondary ms-2">Source Code</a>
+              </div>
+          </div>
+
+            
 
         </div>
     </div>
