--- a/portfolio/app/templates/resume.html
+++ b/portfolio/app/templates/resume.html
@@ -16,10 +16,10 @@
               I'm a versatile Software Developer with a unique journey. While I initially pursued Economics and Finance at the University of Cape Town, my passion for technology led me down a different path.</p><p>Embracing this change, I've immersed myself in the world of software development, combining insights from my UCT studies with cutting-edge skills acquired through Harvard's CS50 Computer Science program and self-learning endeavors through books.</p><p> This blend of academic foundation and technical expertise equips me to tackle challenges head-on and deliver innovative solutions.
 
             </p>
-              <a href="/contact" class="btn-get-started">Available for hire</a>
-              <a class="btn-get-started mt-3" href="{{ url_for('static', filename='resume/resume.pdf') }}" download="MarkMkhabeleResume.pdf" target="_blank">
-                Download my Resume
-               </a>   
+            <a href="/contact" class="btn-get-started">Let's Collaborate</a>
+            <a class="btn-get-started mt-3" href="assets/resume/resume.pdf" target="_blank">
+              Open Resume
+            </a>  
           </div>
       </div>
     </div><!-- End Page Header -->
