added action app under projects

--- a/portfolio/app/templates/index.html
+++ b/portfolio/app/templates/index.html
@@ -36,7 +36,7 @@
           <div class="service-item position-relative">
             <i class="bi bi-display"></i>
             <h4><a href="#">Frontend Development</a></h4>
-            <p>Design and develop engaging user interfaces and interactive experiences using HTML, CSS, and JavaScript frameworks(bootstrap).</p>
+            <p>Design and develop engaging user interfaces and interactive experiences using HTML, CSS, and JavaScript frameworks(Bootstrap & React).</p>
           </div>
         </div><!-- End Frontend Development -->
   
@@ -45,7 +45,7 @@
           <div class="service-item position-relative">
             <i class="bi bi-server"></i>
             <h4><a href="#">Backend Development</a></h4>
-            <p>Build robust server-side applications using Model-View-Controller(Django) and Model-Template-View(flask) with database interaction (creating, inserting, and fetching data).</p>
+            <p>Build robust server-side applications using Model-View-Controller(Django) and Model-Template-View(flask) with database interaction using Django ORM or SQLAlchemy.</p>
           </div>
         </div><!-- End Backend Development -->
         <!-- Data Analysis with R -->
@@ -125,19 +125,22 @@
       <div class="row justify-content-center mt-5">
         <div class="col-6 col-md-3 mb-3">
           <i class="devicon-html5-plain-wordmark" style="font-size: 45px;"></i>
-          
         </div>
+
         <div class="col-6 col-md-3 mb-3">
           <i class="devicon-css3-plain-wordmark" style="font-size: 45px;"></i>
-          
         </div>
+
         <div class="col-6 col-md-3 mb-3">
           <i class="devicon-javascript-plain" style="font-size: 45px;"></i>
           <p>JavaScript</p>
         </div>
+
         <div class="col-6 col-md-3 mb-3">
           <i class="devicon-bootstrap-plain-wordmark" style="font-size: 65px;"></i>
-         
+        </div>
+        <div class="col-6 col-md-3 mb-3">
+          <i class="devicon-react-plain-wordmark" style="font-size: 65px;"></i>
         </div>
       </div>
     </div>
