--- a/portfolio/app/templates/portfolio.html
+++ b/portfolio/app/templates/portfolio.html
@@ -49,31 +49,67 @@
         </div>
 
         <div class="row">
+          <div class="col-md-6 project-item mb-5">
+            <h3>BetterAuction(Ebay clone)</h3>
+            <div class="text-center">
+                <img src="/assets/img/BF3.png" loading="lazy" alt="BetterFinance App" style="width: 100%; max-width: 1200px; height: auto;">
+            </div>
+            <p>
+              The Auction Application is a fully-featured clone of eBay, designed to offer users a seamless experience in creating, browsing, and participating in online auctions. This web application includes features for user registration, listing items for auction, bidding on items, and managing a personalized watchlist.            </p>
+            
+            <div class="row">
+              <div class="col-md-6">
+                <strong>USERNAME:</strong> <span class="text-warning">"tont"</span>
+              </div>
+              <div class="col-md-6">
+                <strong>PASSWORD:</strong> <span class="text-warning">"tony"</span>
+              </div>
+            </div>
+                            <div class="button-container mt-3 d-flex justify-content-center">
+                <!-- Software Demo Button -->
+                <a href="" target="_blank" class="btn btn-success ms-2">Demo Software</a>
+                <a href="" target="_blank" class="btn btn-warning ms-2">Video</a>
+                <!-- Source Code Button -->
+                <a href="https://github.com/mkhmik004/BetterAuction" target="_blank" class="btn btn-secondary ms-2">Source Code</a>
+            </div>
+        </div>
 
             <!-- Project 1: BetterFinance App -->
             <div class="col-md-6 project-item mb-5">
-                <h3>BetterFinance App</h3>
+                <h3>BetterFinance App(EasyEquity clone)</h3>
                 <div class="text-center">
                     <img src="/assets/img/BF.png" loading="lazy" alt="BetterFinance App" style="width: 100%; max-width: 1200px; height: auto;">
                 </div>
-                <p>BetterFinance is a robust web application designed for logged-in users to engage in various financial activities. Users can "buy & sell" stocks, "deposit & withdraw" demo money, and update or reset their login details. Real-time stock quotes from the IEX API ensure accurate data for informed decision-making. Users can monitor their stock portfolio and review transaction history to stay on top of their financial activities.<br><br> USERNAME:<span class="text-warning d-block">"mark"</span>PASSWORD:<span class="text-warning d-block">"mark"</span></p>
-                <div class="button-container mt-3 d-flex justify-content-center">
+                <p>
+                  BetterFinance is a robust web application designed for logged-in users to engage in various financial activities. Users can "buy & sell" stocks, "deposit & withdraw" demo money, and update or reset their login details. Real-time stock quotes from the IEX API ensure accurate data for informed decision-making. Users can monitor their stock portfolio and review transaction history to stay on top of their financial activities.
+                </p>
+                
+                <div class="row">
+                  <div class="col-md-6">
+                    <strong>USERNAME:</strong> <span class="text-warning">"mark"</span>
+                  </div>
+                  <div class="col-md-6">
+                    <strong>PASSWORD:</strong> <span class="text-warning">"mark"</span>
+                  </div>
+                </div>
+                                <div class="button-container mt-3 d-flex justify-content-center">
                     <!-- Software Demo Button -->
-                    <a href="https://mkhmik004.pythonanywhere.com" target="_blank" class="btn btn-success">Demo Software</a>
+                    <a href="https://mkhmik004.pythonanywhere.com" target="_blank" class="btn btn-success ms-2">Demo Software</a>
+                    <a href="https://www.youtube.com/watch?v=jXdBZutX_sc&t=312s" target="_blank" class="btn btn-warning ms-2">Video</a>
                     <!-- Source Code Button -->
                     <a href="https://github.com/mkhmik004/Finance-application" target="_blank" class="btn btn-secondary ms-2">Source Code</a>
                 </div>
             </div>
 
             <div class="col-md-6 project-item mb-5">
-              <h3>Wiki Clone</h3>
+              <h3>Wikipedia Clone</h3>
               <div class="text-center">
-                  <img src="/assets/img/BF.png" loading="lazy" alt="BetterFinance App" style="width: 100%; max-width: 1200px; height: auto;">
+                  <img src="/assets/img/BF2.png" loading="lazy" alt="BetterFinance App" style="width: 100%; max-width: 1200px; height: auto;">
               </div>
               <p>WikiSite is a collaborative knowledge platform built using Django and Bootstrap. It allows users to create and edit wiki articles on various topics. With features such as article creation, editing, and search functionality, WikiSite provides a seamless experience for both creators and consumers of knowledge.</p>
               <div class="button-container mt-3 d-flex justify-content-center">
                   <!-- Software Demo Button -->
-                  <a href="https://www.youtube.com/watch?v=cdqIl0uor9Q&t=1s" target="_blank" class="btn btn-success">Video</a>
+                  <a href="https://www.youtube.com/watch?v=cdqIl0uor9Q&t=1s" target="_blank" class="btn btn-warning ms-2">Video</a>
                   <!-- Source Code Button -->
                   <a href="https://github.com/mkhmik004/wikisite" target="_blank" class="btn btn-secondary ms-2">Source Code</a>
               </div>
