--- a/portfolio/app/templates/portfolio.html
+++ b/portfolio/app/templates/portfolio.html
@@ -65,10 +65,18 @@
                 <strong>PASSWORD:</strong> <span class="text-warning">"tony"</span>
               </div>
             </div>
+              <div class="row">
+              <div class="col-md-6">
+                <strong>USERNAME:</strong> <span class="text-warning">"madara"</span>
+              </div>
+              <div class="col-md-6">
+                <strong>PASSWORD:</strong> <span class="text-warning">"madara"</span>
+              </div>
+            </div>
                             <div class="button-container mt-3 d-flex justify-content-center">
                 <!-- Software Demo Button -->
-                <a href="" target="_blank" class="btn btn-success ms-2">Demo Software</a>
-                <a href="" target="_blank" class="btn btn-warning ms-2">Video</a>
+                <a href="https://betterauction.pythonanywhere.com/" target="_blank" class="btn btn-success ms-2">Demo Software</a>
+                <a href="https://www.youtube.com/watch?v=uriYljeqHgA" target="_blank" class="btn btn-warning ms-2">Video</a>
                 <!-- Source Code Button -->
                 <a href="https://github.com/mkhmik004/BetterAuction" target="_blank" class="btn btn-secondary ms-2">Source Code</a>
             </div>
